# devtools

./: .gitignore  README.md  clone-and-install-repos.bat  clone-and-install-repos.sh  conda-setup.bat  conda-setup.sh  environment.yaml  github-pages.org  hierarchy.txt  install-joommf-for-development.ipynb  install-ubermag-for-development.ipynb  manage-repos.py  manage-ubermag.py  release-process.md  setup-oommfc.sh  tasks.py  update-repos.sh
.github/workflows/: metadata.yml
dockerfile-dind/: Dockerfile  README.md
installation/: README.md  clone-and-install-https.bat  clone-and-install-ssh.bat  environment.yml  setup-ubermag.py
oommfc/: Dockerfile  README.rst
repo-metadata/: authors.json  authors.toml  repo-metadata.py
repo-metadata/templates/: .gitignore  .pre-commit-config.yaml.jinja2  LICENSE  Makefile  Makefile.jinja2  README.md  README.md.jinja2  pyproject.toml  pyproject.toml.jinja2  setup.cfg  setup.cfg.jinja2
repo-metadata/templates/.github/workflows/: workflow.yml  workflow.yml.jinja2
repometadata/: authors.toml  repometadata.py
repometadata/templates/: .pre-commit-config.yaml.jinja2  LICENSE.jinja2  README.md.jinja2  pyproject.toml.jinja2  setup.cfg.jinja2  tasks.py.jinja2
repometadata/templates/.github/workflows/: conda.yml.jinja2  publish.yml.jinja2  test.yml.jinja2  tests.yml.jinja2  workflow.yml.jinja2
repometadata/templates/binder/: environment.yml.jinja2
