[metadata]
name = $package
version = $version
description = $description
author = $authors
long_description = file: README.md
long_description_content_type = text/markdown
url = $url
licence = BSD 3-Clause License
classifiers =
$classifiers

[options]
packages = find:
python_requires >= 3.8
install_requires =
$dependencies
include_package_data = True

[options.entry_points]
$console_scripts